[gd_scene load_steps=2 format=3 uid="uid://crphone0001"]

[ext_resource type="Script" path="res://scenes/ui/phone.gd" id="1_phone"]

[node name="Phone" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phone")

[node name="PhonePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PhonePanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="PhonePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShiftInfoLabel" type="Label" parent="PhonePanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Rides: 0/6 | 11:00 PM"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="PhonePanel/MarginContainer/VBox"]
layout_mode = 2

[node name="RideRequestPanel" type="PanelContainer" parent="PhonePanel/MarginContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="RequestVBox" type="VBoxContainer" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RequestTitle" type="Label" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 16
text = "NEW RIDE REQUEST"
horizontal_alignment = 1

[node name="RiderNameLabel" type="Label" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rider Name"
horizontal_alignment = 1

[node name="PickupLabel" type="Label" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Pickup: ---"

[node name="PhoneDestLabel" type="Label" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Destination: ---"

[node name="ButtonRow" type="HBoxContainer" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="AcceptButton" type="Button" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "Accept (Y)"

[node name="RefuseButton" type="Button" parent="PhonePanel/MarginContainer/VBox/RideRequestPanel/RequestVBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "Refuse (N)"

[node name="NotificationLabel" type="Label" parent="PhonePanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1
autowrap_mode = 2
